test/error/missing-argument.dsk
let f = (a: int, b: int = 0) -> void
    return
f(b = 1)
